# GemmaCode_CLI

./: README.md  pyproject.toml
gemcode/: main.py
gemmacode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
