[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemmacode"
version = "0.1.0"
description = "Local coding agent CLI with Ollama"
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.12",
  "rich>=13.7",
  "prompt_toolkit>=3.0",
  "requests>=2.31"
]

[project.scripts]
gemcode = "gemcode.main:app"
